--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-resumen.xhtml
@@ -21,7 +21,7 @@
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.representanteLegal}" />
 
                 <p:outputLabel value="Tipo de conglomerado: " />
-                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.tipoCongromelado}" />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.tipoConglomerado}" />
 
                 <p:outputLabel value="Situación de control: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.situacionControl}" />
