--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -20,7 +20,7 @@
             <title>#{resourceSistema['sistema.title']}</title>
         </h:head>
 
-        <h:body>
+        <h:body id="BodyPrincipal">
             <ui:debug/>
             <p:layout fullPage="true">
                 <!--ui:include src="../interfaz/utilidades/cpt-ExceptionHandler.xhtml"/-->
